Another update of construction of primitive objects